Sat Aug 31 21:02:07 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c: Use GMP to accelerate big Bignum multiplication.
	  (bary_mul_gmp): New function.
	  (bary_mul): Use bary_mul_gmp.
	  (bigsq): Use different threshold with GMP.

	* configure.in: Detect GMP.

	[ruby-core:56658] [Feature #8796]

Sat Aug 31 15:03:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* compile.c (NODE_MATCH3): pass CALL_INFO to opt_regexpmatch2

	* insns.def (opt_regexpmatch2): use CALL_SIMPLE_METHOD to call =~ if
	  the receiver is not a T_STRING [Bug #8847] [ruby-core:56916]

Sat Aug 31 14:07:11 2013  Tanaka Akira  <akr@fsij.org>

	* lib/securerandom.rb (random_bytes): Use Process.clock_gettime.

Sat Aug 31 00:25:15 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/encoding.h (rb_{ascii8bit,utf8,usascii}_encindex): get
	  rid of conflict with macros defined in internal.h.

Fri Aug 30 22:37:57 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (native_thread_init_stack): wait the creator thread
	  to fill machine stack info, if get_stack_of() is available.

	* thread_pthread.c (native_thread_create): fill the created thread
	  stack info after starting, if get_stack_of() is available.

	* thread_pthread.c (native_thread_create): define attr only if it is
	  used, and merge pthread_create() calls.

	* thread_pthread.c (get_main_stack): separate function to get stack of
	  main thread.

Thu Aug 29 18:05:33 2013  Koichi Sasada  <ko1@atdot.net>

	* struct.c (rb_struct_define_without_accessor_under): added.
	  This function is similar to rb_define_class_under() against
	  rb_define_class().

	* include/ruby/intern.h: add a declaration of this function.

Thu Aug 29 17:03:10 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_call_method): a method entry refers the based
	  class/module, so should search superclass from the origin i-class
	  where the entry belongs to, to get rid of infinite loop when zsuper